@@ -1,5 +1,5 @@
 /* 
- * Copyright (C) 2014-2020 Niklaus F.Schen (Chinese name: Shen Fanchen).
+ * Copyright (C) 2014-2020 Niklaus F.Schen.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
