@@ -1,3 +1,8 @@
+Changes with melon 2.0.2                                          13 Apr 2020
+    *) Optimized file function in melang
+    *) Supported variable arguments in melang
+    *) Updated License
+
 Changes with melon 2.0.1                                          11 Mar 2020
     *) Added message queue and topic in melang
     *) Fixed melang and fib-heap bugs
